Small fixup for AudioData

--- a/index.src.html
+++ b/index.src.html
@@ -2389,15 +2389,15 @@ When an {{AudioData}} has an {{AudioSampleFormat}} that is
 <dfn>interleaved</dfn>, the audio samples from different channels are laid out
 consecutively in the same buffer, in the order described in the section
 [[#audio-channel-ordering]]. The {{AudioData}} has a single plane, that contains a
-number of elements therefore equal to {{AudioData/numberOfFrames}} *
-{{AudioData/numberOfChannels}}.
+number of elements therefore equal to {{AudioData/[[number of frames]]}} *
+{{AudioData/[[number of channels]]}}.
 
 When an {{AudioData}} has an {{AudioSampleFormat}} that is
 <dfn>planar</dfn>, the audio samples from different channels are laid out
 in different buffers, themselves arranged in an order described in the section
 [[#audio-channel-ordering]]. The {{AudioData}} has a number of planes equal to the
-{{AudioData}}'s {{AudioData/numberOfChannels}}. Each plane contains
-{{AudioData/numberOfFrames}} elements.
+{{AudioData}}'s {{AudioData/[[number of channels]]}}. Each plane contains
+{{AudioData/[[number of frames]]}} elements.
 
 Note: The [[WEBAUDIO|Web Audio API]] currently uses {{FLTP}} exclusively.
 
