Fixed enqueuing dfn

--- a/index.src.html
+++ b/index.src.html
@@ -74,7 +74,7 @@ spec: mimesniff; urlPrefix: https://mimesniff.spec.whatwg.org/#
 
 spec: infra; urlPrefix: https://infra.spec.whatwg.org/#
     type: dfn; text: queue; url: queues
-    type: dfn; text: enqueing; url: queue-enqueue;
+    type: dfn; text: enqueuing; url: queue-enqueue;
     type: dfn; text: dequeued; url: queue-dequeue;
     type: dfn; text: empty; url: list-is-empty;
     type: dfn; text: list; url: lists;
