--- a/index.src.html
+++ b/index.src.html
@@ -3926,7 +3926,7 @@ expose some additional information in the form of low level codec features.
 A codec feature profile alone is unlikely to be uniquely identifying. Underlying
 codecs are often implemented entirely in software (be it part of the user agent
 binary or part of the operating system), such that all users who run that
-software will have a common of set capabilities. Additionally, underlying codecs
+software will have a common set of capabilities. Additionally, underlying codecs
 are often implemented with hardware acceleration, but such hardware is mass
 produced and devices of a particular class and manufacture date (e.g. flagship
 phones manufactured in 2020) will often have common capabilities. There will be
