--- a/index.src.html
+++ b/index.src.html
@@ -2143,7 +2143,8 @@ dictionary AudioDataInit {
 <dfn constructor for=AudioData title="AudioData(init)">
   AudioData(init)
 </dfn>
-1. Let |frame| be a new {{AudioData}} object, initialized as follows:
+1. If |init| is not a [=valid AudioDataInit=], throw a {{TypeError}}.
+2. Let |frame| be a new {{AudioData}} object, initialized as follows:
     1. Assign `false` to {{AudioData/[[detached]]}}.
     2. Assign |init|.{{AudioDataInit/format}} to
         {{AudioData/[[format]]}}.
@@ -2159,7 +2160,7 @@ dictionary AudioDataInit {
         |init|.{{AudioDataInit/data}}.
     8. Let |resourceReference| be a reference to |resource|.
     9. Assign |resourceReference| to {{AudioData/[[resource reference]]}}.
-2. Return |frame|.
+3. Return |frame|.
 
 ### Attributes ###{#audiodata-attributes}
 
@@ -2228,11 +2229,19 @@ dictionary AudioDataInit {
         the {{AudioData/[[format]]}}.
     4. If the product of multiplying |bytesPerSample| by |copyElementCount| is
         greater than `destination.byteLength`, throw a {{RangeError}}.
-    5. Let |resource| be the [=media resource=] referenced by
+    5. Let |format| be the value of {{AudioData/[[format]]}}.
+        1. If |format| describes an [=interleaved=] {{AudioSampleFormat}} and
+            |options|.{{AudioDataCopyToOptions/planeIndex}} is greater than 0,
+            throw a {{RangeError}}.
+        2. Otherwise, if |format| describes a [=planar=] {{AudioSampleFormat}}
+            and if |options|.{{AudioDataCopyToOptions/planeIndex}} is equal or
+            greater to {{AudioData/[[number of channels]]}}, throw a
+            {{RangeError}}.
+    6. Let |resource| be the [=media resource=] referenced by
         {{AudioData/[[resource reference]]}}.
-    6. Let |planeFrames| be the region of |resource| corresponding to
+    7. Let |planeFrames| be the region of |resource| corresponding to
         |options|.{{AudioDataCopyToOptions/planeIndex}}.
-    7. Copy elements of |planeFrames| into |destination|, starting with the
+    8. Copy elements of |planeFrames| into |destination|, starting with the
         [=frame=] positioned at |options|.{{AudioDataCopyToOptions/frameOffset}}
         and stopping after |copyElementCount| samples have been copied.
 
@@ -2252,6 +2261,9 @@ dictionary AudioDataInit {
     When invoked, run these steps:
     1. Assign `true` to the {{AudioData/[[detached]]}} internal slot.
     2. Assign `null` to {{AudioData/[[resource reference]]}}.
+    3. Assign `0` to {{AudioData/[[sample rate]]}}.
+    4. Assign `0` to {{AudioData/[[number of frames]]}}.
+    5. Assign `0` to {{AudioData/[[number of channels]]}}.
 
 ### Algorithms ### {#audiodata-algorithms}
 
@@ -2269,7 +2281,7 @@ dictionary AudioDataInit {
         2. Otherwise, assign |options|.{{AudioDataCopyToOptions/frameCount}}
             to |copyFrameCount|.
     5. Let |elementCount| be |copyFrameCount|.
-    6. If {{AudioData/[[format]]}} describes an interleaved
+    6. If {{AudioData/[[format]]}} describes an [=interleaved=]
         {{AudioSampleFormat}}, mutliply |elementCount| by
         {{AudioData/[[number of channels]]}}
     7. return |elementCount|.
@@ -2288,6 +2300,13 @@ dictionary AudioDataInit {
             {{AudioData/[[timestamp]]}} slots to the corresponding slots in
             |clone|.
     2. Return |clone|.
+
+: To check if a {{AudioDataInit}} is a
+    <dfn>valid AudioDataInit</dfn>, run these steps:
+:: 1. If {{AudioDataInit/sampleRate}} = 0, return `false`.
+    2. If {{AudioDataInit/numberOfFrames}} = 0, return `false`.
+    3. If {{AudioDataInit/numberOfChannels}} = 0, return `false`.
+    4. Return `true`.
 
 ### AudioDataCopyToOptions ### {#audiodata-copy-to-options}
 
